--- a/Voice.html
+++ b/Voice.html
@@ -472,7 +472,7 @@ var startBtn = $("#chat-submit")[0];
                 const res = event.results[last];
                 const text = res[0].transcript;
                 if (res.isFinal) {
-                    $('#chat-input').html(result);
+                    $('#chat-input').val(result);
                     setTimeout(function(){
                     generate_message(result, 'self');
                     result = process(result)
