--- a/Voice.html
+++ b/Voice.html
@@ -286,6 +286,7 @@
 </head>
 
 <body>
+    <button id="button" class="hide">Press to Start</button>
     <div id="LoggedInUserFirstName" class="hide">MN</div>
     <div class="VirtualAssistant">
         <div id="chat-circle" class="btn btn-raised">
