--- a/Voice.html
+++ b/Voice.html
@@ -308,9 +308,9 @@
             </div>
             <div class="chat-input">
                 <form>
-                    <input type="text" id="chat-input" placeholder="Send a Query..." />
-                    <div class="chat-submit" id="chat-submit" style="cursor: pointer;"><i class="fa fa-microphone"
-                            style="font-size: 20px;"></i></div>
+                    <input type="text" id="chat-input" placeholder="Send a Query..." disabled/>
+                    <div class="chat-submit" id="chat-submit" style="cursor: pointer;text-align: center;"><i class="fa fa-microphone"
+                            style="font-size: 25px;"></i></div>
                 </form>
             </div>
         </div>
@@ -344,6 +344,7 @@
         $("#chat-circle").click(function () {
             $("#chat-circle").toggle('scale');
             $(".chat-box").toggle('scale');
+            startBtn.click();
         })
 
         $(".chat-box-toggle").click(function () {
