--- a/Voice.html
+++ b/Voice.html
@@ -343,7 +343,7 @@
         $("#chat-circle").click(function () {
             $("#chat-circle").toggle('scale');
             $(".chat-box").toggle('scale');
-            startBtn.click();
+            $('#chat-submit').click();
         })
 
         $(".chat-box-toggle").click(function () {
