--- a/Voice.html
+++ b/Voice.html
@@ -322,6 +322,14 @@
             "Value": "Say something else to search",
             "Keyword": ["Help"]
         }, {
+            "Key": "Hello",
+            "Value": "Hi, How can I help you?",
+            "Keyword": ["Hi", "Hello","Hey"]
+        }, {
+            "Key": "Good Morning",
+            "Value": "Hi, Good Morning?",
+            "Keyword": ["Good Morning"]
+        },{
             "Key": "Create Application",
             "Value": "Goto Rims menu and click application then click new application icon",
             "Keyword": ["Create", "Application"]
