--- a/Voice.html
+++ b/Voice.html
@@ -321,6 +321,10 @@
             "Key": "Help",
             "Value": "Say something else to search",
             "Keyword": ["Help"]
+        },{
+            "Key": "Help",
+            "Value": "Say something else to search",
+            "Keyword": ["Help"]
         }, {
             "Key": "Create Application",
             "Value": "Goto Rims menu and click application then click new application icon",
