--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						//e = onFilter(e);
 						html += '<li class="list-group-item" title="' + e.address + '-' + e.pincode + '">';
 						var color = e.fee_type == 'Paid' ? 'btn-danger' : 'btn-success';
-						html += '<div>' + e.name;
+						html += '<div>' + e.name+' - '+ e.address;
 						html += '<span class="pull-right badge ' + color + '">' + e.fee_type.charAt(0) + '</span>';
 						html += '</div>';
 						html += '<div class="pull-left">';
