--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<style>
 		.list-group-item {
 			padding: 2px 4px;
-			height: 66px;
+			height: 80px;
 			margin-bottom: 4px;
 		}
 
@@ -177,9 +177,9 @@
 						html += '<li class="list-group-item" title="' + e.address + '-' + e.pincode + '">';
 						var color = e.fee_type == 'Paid' ? 'btn-danger' : 'btn-success';
 						html += '<div>' + e.name;
-						html += '<span class="pull-right badge ' + color + '">' + e.fee_type.charAt(0) + '</span> Rs. '+e.fee+';
+						html += '<span class="pull-right badge ' + color + '">' + e.fee_type.charAt(0) + '</span> Rs. '+e.fee;
 						html += '</div>';
-						html += '<div>' + e.address+'</div>';
+						html += '<div style="font-size:10px;">' + e.address+'</div>';
 						html += '<div class="pull-left">';
 
 						color = e.min_age_limit == '18' ? 'btn-success' : 'btn-warning';
